--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,86 @@
-@import "~bootstrap/scss/bootstrap.scss";
+//@import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.App {
+  text-align: center;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
 
-*/
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-content {
+  background-color: black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+form input {
+  height: 26px;
+  border-radius: 5%;
+  display: flex;
+  vertical-align: auto;
+}
+
+form button {
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  margin: 2px 0;
+  border: solid 1px transparent;
+  border-radius: 4px;
+  padding: 0.5em 1em;
+  color: #ffffff;
+  background-color: darkgreen;
+  height: 50px;
+  width: 120px;
+}
+
+h3 {
+  margin: 0;
+}
+
+.list {
+  display: flex;
+  margin: 5px;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.btn-delete {
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  border: solid 1px transparent;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: red;
+  height: 30px;
+  width: 30px;
+}
